--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>site vertical</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">vermelho</a></li>
-                <li><a href="#"></a>verde</li>
-                <li><a href="#"></a>azul</li>
-                <li><a href="#"></a>amarelo</li>
-                <li><a href="#"></a>roxo</li>
+                <li><a href="#vermelho">Vermelho</a></li>
+                <li><a href="#verde">Verde</a></li>
+                <li><a href="#azul">Azul</a></li>
+                <li><a href="#amarelo">Amarelo</a></li>
+                <li><a href="#roxo">Roxo</a></li>
             </ul>
         </nav>
     </header>
