iniciando o tema escolhido

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>site vertical</title>
+    <title>Corinthians</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#vermelho">Vermelho</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#verde">Verde</a></li>
                 <li><a href="#azul">Azul</a></li>
                 <li><a href="#amarelo">Amarelo</a></li>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <section id="vermelho" class="grupo"></section>
+        <section id="home" class="grupo"></section>
         <section id="verde" class="grupo"></section>
         <section id="azul" class="grupo"></section>
         <section id="amarelo" class="grupo"></section>
