mudando a estrutura da aula anterior para o tema desejado

--- a/index.html
+++ b/index.html
@@ -1,30 +1,93 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang='pt-br'>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Corinthians</title>
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel='stylesheet' href='style.css'>
+    <title>Nike Dunk</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#verde">Verde</a></li>
-                <li><a href="#azul">Azul</a></li>
-                <li><a href="#amarelo">Amarelo</a></li>
-                <li><a href="#roxo">Roxo</a></li>
+                <li> <a href='#DLRL'>Rayssa Leal x Dunk Low</a></li>
+                <li> <a href='#DLBR'>Born x Raised</a></li>
+                <li> <a href='#DLSI'>Sashiko Industrial Blue</a></li>
+                <li> <a href='#DLSV'>Strangelove "Valentine's Day"</a></li>
+                <li> <a href='#DLSL'>Sashiko Light Orewood Brown</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="home" class="grupo"></section>
-        <section id="verde" class="grupo"></section>
-        <section id="azul" class="grupo"></section>
-        <section id="amarelo" class="grupo"></section>
-        <section id="roxo" class="grupo"></section>
+        <!-- Rayssa Leal x Nike Dunk Low -->
+        <section id='DLRL' class='grupo'>
+            <div class='container'>
+                <div class='conteudo'>
+                    <h1>Rayssa Leal x Nike Dunk Low</h1>
+                    <p>Inspirado pela skatista brasileira Rayssa Leal, este Nike Dunk Low combina uma paleta de cores vivas e elementos únicos que refletem o estilo urbano e a atitude destemida de Rayssa. A coloração vibrante e os detalhes ousados destacam o tênis no cenário do skate.</p>
+                    <div class='button-compre'>
+                        <a href='#' class='comprar'>Compre Já</a>
+                    </div>
+                </div>
+                <img src='./img/Nike-SB-Dunk-Low-Rayssa-Leal-3.webp' alt='Rayssa Leal x Dunk Low'>
+            </div>
+        </section>
+
+        <!-- Born x Raised -->
+        <section id='DLBR' class='grupo'>
+            <div class='container'>
+                <div class='conteudo'>
+                    <h1>Born x Raised x Nike Dunk Low "One Block At Time"</h1>
+                    <p>Uma colaboração com a marca Born x Raised, o "One Block At Time" representa a força das comunidades locais. Com tons de azul, detalhes texturizados e elementos gráficos personalizados, este modelo exibe um visual urbano e homenageia o estilo de vida das ruas.</p>
+                    <div class='button-compre'>
+                        <a href='#' class='comprar'>Compre Já</a>
+                    </div>
+                </div>
+                <img src='./img/Nike-SB-Dunk-Low-Born-x-Raised-One-Block-At-A-Time-3.webp' alt='Born x Raised'>
+            </div>
+        </section>
+
+        <!-- Sashiko Industrial Blue -->
+        <section id='DLSI' class='grupo'>
+            <div class='container'>
+                <div class='conteudo'>
+                    <h1>Nike Dunk Low "Sashiko Industrial Blue"</h1>
+                    <p>Este modelo apresenta uma abordagem inspirada na técnica japonesa "sashiko", com costuras e detalhes artesanais que adicionam textura e originalidade. O azul industrial dá um toque elegante, enquanto o design artesanal honra as tradições de costura japonesa.</p>
+                    <div class='button-compre'>
+                        <a href='#' class='comprar'>Compre Já</a>
+                    </div>
+                </div>
+                <img src='./img/nike-dunk-low-industrial-blue-sashiko-detail-side.webp' alt='Sashiko Industrial Blue'>
+            </div>
+        </section>
+
+        <!-- Strangelove "Valentine's Day" -->
+        <section id='DLSV' class='grupo'>
+            <div class='container'>
+                <div class='conteudo'>
+                    <h1>Nike Dunk Low x Strangelove "Valentine's Day"</h1>
+                    <p>Desenvolvido para o Dia dos Namorados, este Dunk Low x Strangelove combina tons românticos de rosa e vermelho em um design vibrante e divertido. O acabamento em veludo e os detalhes de coração reforçam a temática amorosa, tornando-o um tênis icônico para a data.</p>
+                    <div class='button-compre'>
+                        <a href='#' class='comprar'>Compre Já</a>
+                    </div>
+                </div>
+                <img src='./img/dunk-valentines-day.png' alt='Strangelove'>
+            </div>
+        </section>
+
+        <!-- Sashiko Light Orewood Brown -->
+        <section id='DLSL' class='grupo'>
+            <div class='container'>
+                <div class='conteudo'>
+                    <h1>Nike Dunk Low "Sashiko Light Orewood Brown"</h1>
+                    <p>Seguindo a linha do "Sashiko Industrial Blue", este modelo traz uma versão mais suave e elegante da técnica de costura japonesa em tons neutros de bege e marrom claro. O visual minimalista e texturizado adiciona um toque de sofisticação e tradição ao estilo casual.</p>
+                    <div class='button-compre'>
+                        <a href='#' class='comprar'>Compre Já</a>
+                    </div>
+                </div>
+                <img src='./img/dunk-light.png' alt='Sashiko Light Orewood Brown'>
+            </div>
+        </section>
     </main>
 </body>
 </html>
