--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li> <a href='#DLRL'>Rayssa Leal x Dunk Low</a></li>
-                <li> <a href='#DLBR'>Born x Raised</a></li>
-                <li> <a href='#DLSI'>Sashiko Industrial Blue</a></li>
-                <li> <a href='#DLSV'>Strangelove "Valentine's Day"</a></li>
-                <li> <a href='#DLSL'>Sashiko Light Orewood Brown</a></li>
+            <ul class="header-nav">
+                <li><a href='#DLRL' class="hover-underline-animation">Rayssa Leal x Dunk Low</a></li>
+                <li><a href='#DLBR' class="hover-underline-animation">Born x Raised</a></li>
+                <li><a href='#DLSI' class="hover-underline-animation">Sashiko Industrial Blue</a></li>
+                <li><a href='#DLSV' class="hover-underline-animation">Strangelove "Valentine's Day"</a></li>
+                <li><a href='#DLSL' class="hover-underline-animation">Sashiko Light Orewood Brown</a></li>
             </ul>
         </nav>
     </header>
